@@ -33,6 +33,13 @@ TODO IMPL: recalc bg only when not fully covering (no alpha, repeat|extend etc..
 TODO IMPL: colour-change event with index
 TODO IMPL: recalc bg always on bg colour change
 
+	- the keysym-list extension has been removed, you cna use the following
+          zsh one-liner provided by Mikachu to expand your existing .Xdefaults
+          file to do without it:
+	- kuake extension now uses the kuake.hotkey resource to specify the hotkey.
+	- searchable-scrollback resource has been deprecated (use keysym instead).
+        - extension parameter paassing is deprecaed (use resource mechanism instead).
+
 9.20 Sat Apr 26 16:22:27 CEST 2014
         - (libptytty) fix bug that prevented urxvtd from writing utmp
           entries when using --fork (reported by Ryan Kavanagh).
